Derived asset/liability account classification. (#30)
* Derived asset/liability account classification.
Added optional paired APR/APY interest terms.
Added fixed-decimal validation and V13 database constraints.
Supported setting, changing, and explicitly clearing interest terms through PATCH.
Ensured interest terms never modify account balances.

* Fix for failing test.